--- a/Website1/HTMLPage1.html
+++ b/Website1/HTMLPage1.html
@@ -9,8 +9,7 @@
     <h4>This is a heading</h4>
     <h5>This is a heading</h5>
     <h6>This is a heading</h6>
-    <p>Hello Everyone</p>
-    <p>Welcome to City Tours, which is an online platform that provides you with the ability to view different cities in South Africa within our platform.
+    <p>Hello everyone and Welcome to City Tours, which is an online platform that provides you with the ability to view different cities in South Africa within our platform.
     Below are links to the IT varsity and Google websites:
         <ul> <a href="http://www.google.com">Click here to go to Google</a> </ul>
         <ul> <a href="http://www.itvarsity.org">Click here to go to IT varsity</a></ul>
