--- a/Website1/HTMLPage1.html
+++ b/Website1/HTMLPage1.html
@@ -17,5 +17,6 @@
     <img src="images/cablecar.jpg" height="150" />
     <img src="images/city.jpg" height="150" />
     <img src="images/plane.jpg" height="150" />
+    <a href = "https://github.com/IamLuckyT" target="_blank"> GitHub Profile</a>
 </body>
 </html>
