--- a/Website1/HTMLPage1.html
+++ b/Website1/HTMLPage1.html
@@ -13,6 +13,8 @@
     Below are links to the IT varsity and Google websites:
         <ul> <a href="http://www.google.com">Click here to go to Google</a> </ul>
         <ul> <a href="http://www.itvarsity.org">Click here to go to IT varsity</a></ul>
+
+    I am just editing so that it shows I made some contributions
     </p>
     <img src="images/cablecar.jpg" height="150" />
     <img src="images/city.jpg" height="150" />
