--- a/Website1/HTMLPage1.html
+++ b/Website1/HTMLPage1.html
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
+<html>
+<head> Welcome to MyTube
 <html lang = "en"> <!-- “This document is written in English, and everything inside the <html> tag should be interpreted as HTML.” -->
 <head> Welcome to City Tours
     <meta charset ="UTF-8"> <!-- <meta>: This is an HTML tag used to define metadata—information about the webpage that doesn’t appear on the page itself but helps browsers, search engines, and other systems understand how to handle the content.
@@ -6,9 +8,26 @@
                                 "UTF-8" is one of the most widely used character encodings because it supports virtually all characters from different languages, special symbols, and emojis. It ensures that text is displayed correctly, preventing issues like garbled characters or unreadable symbols.
                             -->
     <meta name = "viewport" content ="width=device-width,initial-scale=1.0">
-    
+    <title> Sidebar Menu</title> 
+    <link rel="Stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="sidebar">
+        <div class="logo">Your logo </div>
+        <nav class="nav-links">
+            <a href="MyTube.html">Home</a>
+            <a href="#">Shorts</a>
+            <a href="#">Subscriptions</a>
+            <hr> <!--It is used to create a horizontal line that visually separates sections of content on a webpage.-->
+            <a href="#">History</a>
+            <a href="#">Playlists</a>
+            <a href="#">Your Vids</a>
+            <a href="#">Watch Later</a>
+            <a href="#">Liked Vids</a>
+            <hr>
+            <div class="section-title"> Subscriptions</div>
+        </nav>
+    </div>
     <h1>City Tours</h1>
     <h2>This is a heading</h2>
     <h3>This is a heading</h3>
