--- a/Website1/HTMLPage1.html
+++ b/Website1/HTMLPage1.html
@@ -28,13 +28,32 @@
             <div class="section-title"> Subscriptions</div>
         </nav>
     </div>
+    <div class="main-content"> Main content</div>
     <h1>City Tours</h1>
+        <nav>
+         <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Products</a></li>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Account</a></li>
+            <li><a href="">Contact Us</a></li>
+        </ul id="MenuItems">
+    </nav>
     <h2>This is a heading</h2>
     <h3>This is a heading</h3>
     <h4>This is a heading</h4>
     <h5>This is a heading</h5>
     <h6>This is a heading</h6>
-    <p>Hello everyone and Welcome to City Tours, which is an online platform that provides you with the ability to view different cities in South Africa within our platform.
+    <nav>
+         <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Products</a></li>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Account</a></li>
+            <li><a href="">Contact Us</a></li>
+        </ul id="MenuItems">
+    </nav>
+    <p>Hello Everyone and Welcome to City Tours, which is an online platform that provides you with the ability to view different cities in South Africa within our platform.
     Below are links to the IT varsity and Google websites:
         <ul> <a href="http://www.google.com">Click here to go to Google</a> </ul>
         <ul> <a href="http://www.itvarsity.org">Click here to go to IT varsity</a></ul>
@@ -44,6 +63,9 @@
     <img src="images/cablecar.jpg" height="150" />
     <img src="images/city.jpg" height="150" />
     <img src="images/plane.jpg" height="150" />
-    <a href = "https://github.com/IamLuckyT" target="_blank"> GitHub Profile</a>
+
+    I want to see if sync works
+    <a href = "https://github.com/IamLuckyT" target="_blank"> GitHub Profile</a> 
+
 </body>
 </html>
