Added a few features like the toggle button and made it more responsive with css and js

--- a/Website1/index.html
+++ b/Website1/index.html
@@ -14,6 +14,7 @@
 <body>
     <header class="top-bar">
         <button id="menu-toggle"> &#9776</button> <!-- This is a button element with an ID of "menu-toggle". The content inside the button is the HTML entity for a hamburger icon (three horizontal lines). -->
+        <button id="close-sidebar"> &times;</button>
         <div class="logo">Your logo </div>
     </header>
     <div class="sidebar">
@@ -31,6 +32,7 @@
             <div class="section-title"> Subscriptions</div>
         </nav>
     </div>
+    <div class="overlay" id="overlay"></div>
     <div class="main-content"> 
         <h1>Welcome to MyTube</h1>
         <p>This is where the content goes</p>
