Lets see if the debugger for the sidebar works

--- a/Website1/index.html
+++ b/Website1/index.html
@@ -14,8 +14,8 @@
 <body>
     <header class="top-bar">
         <button id="menu-toggle"> &#9776</button> <!-- This is a button element with an ID of "menu-toggle". The content inside the button is the HTML entity for a hamburger icon (three horizontal lines). -->
-        <button id="close-sidebar"> &times;</button>
-        <div class="logo">Your logo </div>
+        <button id="close-sidebar">&times;</button>
+        <div class="logo">MYTUBE </div>
     </header>
     <div class="sidebar">
         <nav class="nav-links">
