--- a/Website1/index.html
+++ b/Website1/index.html
@@ -16,7 +16,7 @@
         <button id="close-sidebar">&times;</button>
         <div class="logo">MYTUBE </div>
     </header>
-    <div class="sidebar">
+    <div class="sidebar" id="sidebar">  
         <nav class="nav-links">
             <a href="MyTube.html">Home</a>
             <a href="#">Shorts</a>
