I faced issues in terms of the background matching with the sidebar so this commit fixes that

--- a/Website1/index.html
+++ b/Website1/index.html
@@ -7,7 +7,7 @@
                                 "UTF-8" is one of the most widely used character encodings because it supports virtually all characters from different languages, special symbols, and emojis. It ensures that text is displayed correctly, preventing issues like garbled characters or unreadable symbols.
                             -->
     <meta name = "viewport" content ="width=device-width,initial-scale=1.0">
-    <title> Responsive Sidebar </title> 
+    <title> MYTUBE </title> 
     <link rel="Stylesheet" href="styles.css">
 </head>
 <body>
