--- a/Website1/index.html
+++ b/Website1/index.html
@@ -18,7 +18,7 @@
     </header>
     <div class="sidebar" id="sidebar">  
         <nav class="nav-links">
-            <a href="www.youtube.com.html">Home</a>
+            <a href="www.youtube.com">Home</a>
             <a href="https://www.youtube.com/shorts/lxJGvwexD0s">Shorts</a>
             <a href="#">Subscriptions</a>
             <hr> <!--It is used to create a horizontal line that visually separates sections of content on a webpage.-->
