--- a/Website1/index.html
+++ b/Website1/index.html
@@ -19,7 +19,7 @@
     <div class="sidebar" id="sidebar">  
         <nav class="nav-links">
             <a href="https://www.youtube.com">Home</a>
-            <a href="https://www.youtube.com/shorts/lxJGvwexD0s">Shorts</a>
+            <a href="https://www.youtube.com/shorts">Shorts</a>
             <a href="#">Subscriptions</a>
             <hr> <!--It is used to create a horizontal line that visually separates sections of content on a webpage.-->
             <a href="#">History</a>
