Added Youtube links to the ref of the hyperlinks

--- a/Website1/index.html
+++ b/Website1/index.html
@@ -20,13 +20,13 @@
         <nav class="nav-links">
             <a href="https://www.youtube.com">Home</a>
             <a href="https://www.youtube.com/shorts">Shorts</a>
-            <a href="#">Subscriptions</a>
+            <a href="https://www.youtube.com/feed/subscriptions">Subscriptions</a>
             <hr> <!--It is used to create a horizontal line that visually separates sections of content on a webpage.-->
-            <a href="#">History</a>
-            <a href="#">Playlists</a>
+            <a href="https://www.youtube.com/feed/history">History</a>
+            <a href="https://www.youtube.com/feed/playlists">Playlists</a>
             <a href="#">Your Vids</a>
-            <a href="#">Watch Later</a>
-            <a href="#">Liked Vids</a>
+            <a href="https://www.youtube.com/playlist?list=WL">Watch Later</a>
+            <a href="https://www.youtube.com/playlist?list=LL">Liked Vids</a>
             <hr>
             <div class="section-title"> Subscriptions</div>
         </nav>
