Added dark theme support in HTML, CSS, and JavaScript files.

--- a/Website1/index.html
+++ b/Website1/index.html
@@ -13,8 +13,9 @@
 <body>
     <header class="top-bar">
         <button id="menu-toggle"> &#9776</button> <!-- This is a button element with an ID of "menu-toggle". The content inside the button is the HTML entity for a hamburger icon (three horizontal lines). -->
-        <button id="close-sidebar">&times;</button>
+        <button id="close-sidebar">&times;</button> <!-- This is a button element with an ID of "close-sidebar". The content inside the button is the HTML entity for a multiplication sign (×), which is often used to represent a close or cancel action. -->
         <div class="logo">MYTUBE </div>
+        <button id="theme-toggle" title="Toggle Dark Mode">🌓</button> <!-- This is used to setuo the theme for dark and light mode -->
     </header>
     <div class="sidebar" id="sidebar">  
         <nav class="nav-links">
