--- a/Website1/index.html
+++ b/Website1/index.html
@@ -15,7 +15,7 @@
         <button id="menu-toggle"> &#9776</button> <!-- This is a button element with an ID of "menu-toggle". The content inside the button is the HTML entity for a hamburger icon (three horizontal lines). -->
         <button id="close-sidebar">&times;</button> <!-- This is a button element with an ID of "close-sidebar". The content inside the button is the HTML entity for a multiplication sign (×), which is often used to represent a close or cancel action. -->
         <div class="logo">MYTUBE </div>
-        <button id="theme-toggle" title="Toggle Dark Mode">🌓</button> <!-- This is used to setup the theme for dark and light mode -->
+    
     </header>
     <div class="sidebar" id="sidebar">  
         <nav class="nav-links">
@@ -31,12 +31,16 @@
             <hr>
             <div class="section-title"> Subscriptions</div>
         </nav>
+
+    <div class="theme-toggle-wrapper">
+        <button id="theme-toggle" title="Toggle Dark Mode">🌓</button> <!-- This is used to setup the theme for dark and light mode -->
+    </div>
     </div>
     <div class="overlay" id="overlay"></div>
     <!--<div class="main-content"> 
         <h1>Welcome to MyTube</h1>
         <p>This is where the content goes</p>
     </div> -->
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
