Start to focus more on main page.

--- a/Website1/index.html
+++ b/Website1/index.html
@@ -37,10 +37,10 @@
     </div>
     </div>
     <div class="overlay" id="overlay"></div>
-    <!--<div class="main-content"> 
+    <div class="main-content"> 
         <h1>Welcome to MyTube</h1>
         <p>This is where the content goes</p>
-    </div> -->
+    </div> 
 <script src="script.js"></script>
 </body>
 </html>
