Still on that issue

--- a/Website1/index.html
+++ b/Website1/index.html
@@ -31,7 +31,8 @@
             <hr>
             <div class="section-title"> Subscriptions</div>
         </nav>
-
+        
+        <!--Moves the theme toggle button to the bottom-->
     <div class="theme-toggle-wrapper">
         <button id="theme-toggle" title="Toggle Dark Mode">🌓</button> <!-- This is used to setup the theme for dark and light mode -->
     </div>
