Add logo on index script and also created a css script

--- a/Website2/index.html
+++ b/Website2/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="Stylesheet" href="style.css">
     <title>Pine City Zoo</title>
 </head>
 <body>
-    
+    <div id="header">
+        <img src="images/logo.png">
+    </div>
+    <div id="top-tab">
+        
+    </div>
 </body>
 </html>
