--- a/Website2/index.html
+++ b/Website2/index.html
@@ -8,10 +8,19 @@
 </head>
 <body>
     <div id="header">
-        <img src="images/logo.png">
+        <img src="Website2/images/logo.png">
     </div>
     <div id="top-tab">
-        
+        <a href="#"> ANIMALS</a>
+        <a href="#"> MAP</a>
+        <a href="#"> PLACES</a>
+    </div>
+    <div id="main-home">
+        <img src="Website2/images/map.png" width="100%">
+    </div>
+        <div id="button-tab">
+        <a href="#"> WEATHER</a>
+        <a href="#"> FEEDBACK</a>
     </div>
 </body>
 </html>
