--- a/Website2/index.html
+++ b/Website2/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="header">
-        <img src="Website2/images/logo.png">
+        <img src="images/logo.png">
     </div>
     <div id="top-tab">
         <a href="#"> ANIMALS</a>
