--- a/Website2/index.html
+++ b/Website2/index.html
@@ -16,7 +16,7 @@
         <a href="#"> PLACES</a>
     </div>
     <div id="main-home">
-        <img src="/Website2/images/map.png" width="100%">
+        <img src="Website2/images/map.png" width="100%">
     </div>
         <div id="button-tab">
         <a href="#"> WEATHER</a>
