Added game hyperilink

--- a/Website2/index.html
+++ b/Website2/index.html
@@ -14,9 +14,10 @@
         <a href="#"> ANIMALS</a>
         <a href="#"> MAP</a>
         <a href="#"> PLACES</a>
+        <a href="#"> GAME</a>
     </div>
     <div id="main-home">
-        <img src="images/map.png" width="100%">
+        <img src="/Website2/images/map.png" width="100%">
     </div>
         <div id="button-tab">
         <a href="#"> WEATHER</a>
