--- a/Website2/index.html
+++ b/Website2/index.html
@@ -17,7 +17,7 @@
         <a href="#"> GAME</a>
     </div>
     <div id="main-home">
-        <img src="/Website2/images/map.png" width="100%">
+        <img src="images/map.png" width="100%">
     </div>
         <div id="button-tab">
         <a href="#"> WEATHER</a>
