--- a/Website2/index.html
+++ b/Website2/index.html
@@ -14,7 +14,7 @@
         <a href="#"> ANIMALS</a>
         <a href="#"> MAP</a>
         <a href="#"> PLACES</a>
-        <a href="#"> GAME</a>
+        <!--<a href="#"> GAME</a>-->
     </div>
     <div id="main-home">
         <img src="images/map.png" width="100%">
