--- a/Website2/animals.html
+++ b/Website2/animals.html
@@ -11,13 +11,20 @@
         <img src="images/logo.png">
     </div>
     <div id="top-tab">
-        <a href="animals.html"> ANIMALS</a>
+        <a href="#"> ANIMALS</a>
         <a href="#"> MAP</a>
         <a href="#"> PLACES</a>
         <!--<a href="#"> GAME</a>-->
     </div>
-    <div id="main-home">
-        <img src="images/map.png" width="100%">
+    <div id="main">
+    </div id="content">
+        <a class="info-box" href="#">
+            <img class="right"   src="images/next-arrow.png">
+            <img src="images/elephant-tn.png">
+            <h3>ELEPHANT</h3>
+            <P>Gentle giants of the jungle</P>
+        </a>
+        
     </div>
         <div id="button-tab">
         <a href="#"> WEATHER</a>
