--- a/Website2/index.html
+++ b/Website2/index.html
@@ -19,7 +19,7 @@
     <div id="main-home">
         <img src="images/map.png" width="100%">
     </div>
-        <div id="button-tab">
+        <div id="bottom-tab">
         <a href="#"> WEATHER</a>
         <a href="#"> FEEDBACK</a>
     </div>
