--- a/Website2/animals.html
+++ b/Website2/animals.html
@@ -24,9 +24,9 @@
             <h3>ELEPHANT</h3>
             <P>Gentle giants of the jungle</P>
         </a>
-        
+
     </div>
-        <div id="button-tab">
+        <div id="bottom-tab">
         <a href="#"> WEATHER</a>
         <a href="#"> FEEDBACK</a>
     </div>
