Added more animals to the list

--- a/Website2/animals.html
+++ b/Website2/animals.html
@@ -19,12 +19,54 @@
     <div id="main">
     </div id="content">
         <a class="info-box" href="#">
-            <img class="right"   src="images/next-arrow.png">
+            <img class="right" src="images/next-arrow.png">
             <img src="images/elephant-tn.png">
             <h3>ELEPHANT</h3>
             <P>Gentle giants of the jungle</P>
         </a>
-
+        <a class="info-box" href="#">
+            <img class="right" src="images/next-arrow.png">
+            <img src="images/gemsbok-tn.png">
+            <h3>GEMSBOK</h3>
+            <P>Come and see the majestic Gemsbok</P>
+        </a>
+        <a class="info-box" href="#">
+            <img class="right" src="images/next-arrow.png">
+            <img src="images/giraffe-tn.png">
+            <h3>GIRAFFE</h3>
+            <P>Meet the tallest animal on earth</P>
+        </a>
+        <a class="info-box" href="#">
+            <img class="right" src="images/next-arrow.png">
+            <img src="images/hippo-tn.png">
+            <h3>HIPPO</h3>
+            <P>See the largest land mammal</P>
+        </a>
+        <a class="info-box" href="#">
+            <img class="right" src="images/next-arrow.png">
+            <img src="images/lion-tn.png">
+            <h3>LION</h3>
+            <P>King of the jungle</P>
+        </a>
+        <a class="info-box" href="#">
+            <img class="right" src="images/next-arrow.png">
+            <img src="images/penguin-tn.png">
+            <h3>PENGUIN</h3>
+            <P>Adorable flightless birds</P>
+        </a>
+        <a class="info-box" href="#">
+            <img class="right" src="images/next-arrow.png">
+            <img src="images/rhino-tn.png">
+            <h3>RHINO</h3>
+            <P>See the mighty rhinoceros</P>
+        </a>
+        <a class="info-box" href="#">
+            <img class="right" src="images/next-arrow.png">
+            <img src="images/zebra-tn.png">
+            <h3>ZEBRA</h3>
+            <P>Black and white striped wonders</P>
+        </a>
+        
     </div>
         <div id="bottom-tab">
         <a href="#"> WEATHER</a>
