--- a/Website2/animals.html
+++ b/Website2/animals.html
@@ -21,52 +21,64 @@
         <a class="info-box" href="#">
             <img class="right" src="images/next-arrow.png">
             <img src="images/elephant-tn.png">
-            <h3>ELEPHANT</h3>
+            <h3>ELEPHANTS</h3>
             <P>Gentle giants of the jungle</P>
         </a>
         <a class="info-box" href="#">
             <img class="right" src="images/next-arrow.png">
             <img src="images/gemsbok-tn.png">
-            <h3>GEMSBOK</h3>
+            <h3>GEMSBOKS</h3>
             <P>Come and see the majestic Gemsbok</P>
         </a>
         <a class="info-box" href="#">
             <img class="right" src="images/next-arrow.png">
             <img src="images/giraffe-tn.png">
-            <h3>GIRAFFE</h3>
+            <h3>GIRAFFES</h3>
             <P>Meet the tallest animal on earth</P>
         </a>
         <a class="info-box" href="#">
             <img class="right" src="images/next-arrow.png">
-            <img src="images/hippo-tn.png">
-            <h3>HIPPO</h3>
+            <img src="images/elephant-tn.png">
+            <h3>HIPPOS</h3>
             <P>See the largest land mammal</P>
         </a>
         <a class="info-box" href="#">
             <img class="right" src="images/next-arrow.png">
             <img src="images/lion-tn.png">
-            <h3>LION</h3>
+            <h3>LIONS</h3>
             <P>King of the jungle</P>
         </a>
         <a class="info-box" href="#">
             <img class="right" src="images/next-arrow.png">
-            <img src="images/penguin-tn.png">
-            <h3>PENGUIN</h3>
-            <P>Adorable flightless birds</P>
+            <img src="images/panda-tn.png">
+            <h3>PANDAS</h3>
+            <P>The pandas seem to be everyone's favorite</P>
         </a>
         <a class="info-box" href="#">
             <img class="right" src="images/next-arrow.png">
-            <img src="images/rhino-tn.png">
-            <h3>RHINO</h3>
-            <P>See the mighty rhinoceros</P>
+            <img src="images/koala-tn.png">
+            <h3>KOALAS</h3>
+            <P>Come take a look at the cute koalas</P>
         </a>
         <a class="info-box" href="#">
             <img class="right" src="images/next-arrow.png">
-            <img src="images/zebra-tn.png">
-            <h3>ZEBRA</h3>
-            <P>Black and white striped wonders</P>
+            <img src="images/gorilla-tn.png">
+            <h3>GORILLAS</h3>
+            <P>Kong the gorilla is much friendlier than he looks</P>
         </a>
-        
+            <a class="info-box" href="#">
+            <img class="right" src="images/next-arrow.png">
+            <img src="images/warthog-tn.png">
+            <h3>WARTHOGS</h3>
+            <P>Find out more about this funny-looking fellow</P>
+        </a>
+            </a>
+            <a class="info-box" href="#">
+            <img class="right" src="images/next-arrow.png">
+            <img src="images/monkey-tn.png">
+            <h3>MONKEYS</h3>
+            <P>Playful monkeys are cleverer than you think</P>
+        </a>
     </div>
         <div id="bottom-tab">
         <a href="#"> WEATHER</a>
