--- a/Website2/animals.html
+++ b/Website2/animals.html
@@ -11,14 +11,14 @@
         <img src="images/logo.png">
     </div>
     <div id="top-tab">
-        <a href="#"> ANIMALS</a>
+        <a href="animals.html"> ANIMALS</a>
         <a href="#"> MAP</a>
         <a href="#"> PLACES</a>
         <!--<a href="#"> GAME</a>-->
     </div>
     <div id="main">
     </div id="content">
-        <a class="info-box" href="#">
+        <a class="info-box" href="elephants.html">
             <img class="right" src="images/next-arrow.png">
             <img src="images/elephant-tn.png">
             <h3>ELEPHANTS</h3>
