--- a/Website2/elephants.html
+++ b/Website2/elephants.html
@@ -11,7 +11,7 @@
         <img src="images/logo.png">
     </div>
     <div id="top-tab">
-        <a href="#"> ANIMALS</a>
+        <a href="animals.html"> ANIMALS</a>
         <a href="#"> MAP</a>
         <a href="#"> PLACES</a>
         <!--<a href="#"> GAME</a>-->
