Made sure that the logo when clicked redirects to the homepage.

--- a/Website2/animals.html
+++ b/Website2/animals.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="header">
-        <img src="images/logo.png">
+        <a href="index.html" src="images/logo.png"></a>
     </div>
     <div id="top-tab">
         <a href="animals.html"> ANIMALS</a>
@@ -42,7 +42,7 @@
             <h3>HIPPOS</h3>
             <P>See the largest land mammal</P>
         </a>
-        <a class="info-box" href="#">
+        <a class="info-box" href="lions.html">
             <img class="right" src="images/next-arrow.png">
             <img src="images/lion-tn.png">
             <h3>LIONS</h3>
