--- a/Website2/animals.html
+++ b/Website2/animals.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div id="header">
-        <a href="index.html" src="images/logo.png"></a>
+        <a href="index.html">
+            <img src="images/logo.png">
+        </a>
     </div>
     <div id="top-tab">
         <a href="animals.html"> ANIMALS</a>
