Changed the elephant image to lion in the lion file

--- a/Website2/lions.html
+++ b/Website2/lions.html
@@ -20,7 +20,7 @@
     </div id="content">
         <div id="info-box-full">
             <h1>Lions</h1>
-            <img src="images/elephant.jpg">
+            <img src="images/lion.jpg">
             <p>Lions are large carnivorous mammals that belong to the family Felidae. 
                 They are known for their majestic manes and social behavior, often living in groups called prides. 
                 Lions primarily inhabit savannas, grasslands, and open woodlands in Africa and parts of Asia.
