--- a/Website2/animals.html
+++ b/Website2/animals.html
@@ -26,13 +26,13 @@
             <h3>ELEPHANTS</h3>
             <P>Gentle giants of the jungle</P>
         </a>
-        <a class="info-box" href="#">
+        <a class="info-box" href="gemsbok.html">
             <img class="right" src="images/next-arrow.png">
             <img src="images/gemsbok-tn.png">
             <h3>GEMSBOKS</h3>
             <P>Come and see the majestic Gemsbok</P>
         </a>
-        <a class="info-box" href="#">
+        <a class="info-box" href="giraffes.html">
             <img class="right" src="images/next-arrow.png">
             <img src="images/giraffe-tn.png">
             <h3>GIRAFFES</h3>
@@ -62,7 +62,7 @@
             <h3>KOALAS</h3>
             <P>Come take a look at the cute koalas</P>
         </a>
-        <a class="info-box" href="#">
+        <a class="info-box" href="gorillas.html">
             <img class="right" src="images/next-arrow.png">
             <img src="images/gorilla-tn.png">
             <h3>GORILLAS</h3>
