Made acronyms in brackets bold and focused on making the

--- a/Website2/gemsbok.html
+++ b/Website2/gemsbok.html
@@ -24,15 +24,17 @@
             <h1>Gemsbok</h1>
             <img src="images/gemsbok.jpg"> 
             <p>
-                The Gemsbok, also known as the Oryx, is a large antelope native to the arid regions of Southern Africa,
+                The Gemsbok, also known as the <b>Oryx</b>, is a large antelope native to the arid regions of Southern Africa,
                 such as the Kalahari Desert. Some authorities formerly included the East African oryx as a subspecies. 
                 It is characterized by its long, straight horns and striking coat, which is typically tan with white markings.
                 Gemsboks are well adapted to survive in harsh desert conditions, able to go long periods without water.
                 They are social animals, often found in herds, and are known for their impressive speed and agility.
             </p>
-            <p>The gemsbok is depicted on the coat of arms of Namibia, where the current population of the species is estimated at 373,000 individuals.
+            <p>
+                The gemsbok is depicted on the coat of arms of Namibia, where the current population of the species is estimated at 373,000 individuals.
             </p>
-            <p>The name "gemsbok" in English is derived from Afrikaans gemsbok, which itself is derived from the Dutch name of the male chamois, gemsbok. 
+            <p>
+                The name "gemsbok" in English is derived from Afrikaans gemsbok, which itself is derived from the Dutch name of the male chamois, gemsbok. 
                 Although some superficial similarities in appearance (especially in the facial pattern) are noticed, 
                 the chamois and the oryx are not closely related.
             </p>
