--- a/Website2/giraffes.html
+++ b/Website2/giraffes.html
@@ -24,7 +24,7 @@
             <h1>Giraffes</h1>
             <img src="images/giraffe-large.jpg"> 
             <p>
-                The giraffe (Giraffa camelopardalis) is a tall African mammal known for its long neck and legs, spotted coat, and unique ossicones. 
+                The giraffe <b>(Giraffa camelopardalis)</b> is a tall African mammal known for its long neck and legs, spotted coat, and unique ossicones. 
                 It is the tallest living terrestrial animal and the largest ruminant. Its species name refers to its camel-like shape and its leopard-like colouring. 
                 Its chief distinguishing characteristics are its extremely long neck and legs, its horn-like ossicones, and its distinctive coat patterns. 
                 It is classified under the family Giraffidae, along with its closest extant relative, the okapi. 
@@ -36,8 +36,9 @@
                 They primarily feed on leaves, fruits, and flowers of woody plants, with a preference for acacia species. 
                 Giraffes have a unique method of locomotion called "pacing," where both legs on one side move forward simultaneously.
             </p>
-            <p></p>
-                Giraffes are preyed on by lions; their calves are also targeted by leopards, spotted hyenas, and African wild dogs. 
+            <p>                
+                Giraffes are social animals that live in loose herds, which can vary in size and composition.
+                They are preyed on by lions; their calves are also targeted by leopards, spotted hyenas, and African wild dogs. 
                 Adult giraffes do not have strong social bonds, though they do gather in loose aggregations if they happen to be moving in the same general direction. 
                 Males establish social hierarchies through "necking", which are combat bouts where the neck is used as a weapon. 
                 Dominant males gain mating access to females, which bear the sole responsibility for raising the young.
