--- a/Website2/gorillas.html
+++ b/Website2/gorillas.html
@@ -23,11 +23,13 @@
         <div id="info-box-full">
             <h1>Gorillas</h1>
             <img src="images/gorilla.jpg">
-            <p>Gorillas are the largest of the great apes and are known for their intelligence and strong social bonds. 
+            <p>
+                Gorillas are the largest of the great apes and are known for their intelligence and strong social bonds. 
                 They live in groups called troops. Gorillas are primarily herbivorous apes that inhabit the forests of central Africa, feeding on leaves, stems, and fruit.
                 They are critically endangered due to habitat loss and poaching.
             </p>
-            <p> The eponymous genus Gorilla is divided into two species: the eastern gorillas and the western gorillas, and either four or five subspecies. 
+            <p> 
+                The eponymous genus Gorilla is divided into two species: the eastern gorillas and the western gorillas, and either four or five subspecies. 
                 They are the largest living primates by physical size. The DNA of gorillas is highly similar to that of humans, 
                 from 95 to 99% depending on what is counted, and they are the next closest living relatives to humans after the chimpanzees and bonobos.
             </p>
