--- a/Website2/elephants.html
+++ b/Website2/elephants.html
@@ -23,27 +23,33 @@
         <div id="info-box-full">
             <h1>Elephants</h1>
             <img src="images/elephant.jpg">
-            <p>Elephants are the largest land animals on Earth. They are known for their intelligence, strong social bonds, and long trunks.</p>
-            <p>They are of the family Elephantidae and the order Proboscidea. Two species are traditionally recognised, the African elephant (Loxodonta africana) and the Asian elephant (Elephas maximus). 
+            <p>
+                Elephants are the largest land animals on Earth. They are known for their intelligence, strong social bonds, and long trunks.
+                They are of the family Elephantidae and the order Proboscidea. Two species are traditionally recognised, the African elephant (Loxodonta africana) and the Asian elephant (Elephas maximus). 
                 Elephants are scattered throughout sub-Saharan Africa, South Asia, and Southeast Asia. 
                 Male African elephants are the largest extant terrestrial animals and can reach a height of 4 m (13 ft) and weigh 7,000 kg (15,000 lb).
             </p>
-            <p>All elephants have several distinctive features the most notable of which is a long trunk or proboscis, used for many purposes, particularly breathing, lifting water and grasping objects. 
+            <p>
+                All elephants have several distinctive features the most notable of which is a long trunk or proboscis, used for many purposes, particularly breathing, lifting water and grasping objects. 
                 Their incisors grow into tusks, which can serve as weapons and as tools for moving objects and digging. 
                 Elephants' large ear flaps help to control their body temperature. Their pillar-like legs can carry their great weight. 
                 African elephants have larger ears and concave backs while Asian elephants have smaller ears and convex or level backs.
             </p>
-            <p>Elephants are herbivorous and can be found in different habitats including savannahs, forests, deserts and marshes. They prefer to stay near water.
+            <p>
+                Elephants are herbivorous and can be found in different habitats including savannahs, forests, deserts and marshes. They prefer to stay near water.
                 They are social animals and live in groups called herds, which are usually led by a matriarch. 
                 Elephants communicate through vocalizations, body language, and even seismic signals.
             </p>       
-            <p>In Pine City Zoo, we have two African elephants named Ella and Eli. They love to play in the water and eat fresh fruits.
+            <p>
+                In Pine City Zoo, we have two African elephants named Ella and Eli. They love to play in the water and eat fresh fruits.
                 They are very friendly and enjoy interacting with visitors. 
                 Ella is the older of the two and is very protective of Eli, who is still a young elephant.
             </p>
+            
             <p><strong> WILL YOU FIND THEM?</strong></p>
-            <p>You will find the elephants at pen E22, right next to the amphitheatre.
-               They are usually active in the morning and late afternoon, so plan your visit accordingly.
+            <p>
+                You will find the elephants at pen E22, right next to the amphitheatre.
+                They are usually active in the morning and late afternoon, so plan your visit accordingly.
             </p>     
         </div>
         <div id="bottom-tab">
