Added a few images for the hippo tag and also added the hippo script file

--- a/Website2/animals.html
+++ b/Website2/animals.html
@@ -40,7 +40,7 @@
         </a>
         <a class="info-box" href="#">
             <img class="right" src="images/next-arrow.png">
-            <img src="images/elephant-tn.png">
+            <img src="images/hippo-tn.jpg">
             <h3>HIPPOS</h3>
             <P>See the largest land mammal</P>
         </a>
