Linked the hippos html to its hyperlink

--- a/Website2/animals.html
+++ b/Website2/animals.html
@@ -38,7 +38,7 @@
             <h3>GIRAFFES</h3>
             <P>Meet the tallest animal on earth</P>
         </a>
-        <a class="info-box" href="#">
+        <a class="info-box" href="hippos.html">
             <img class="right" src="images/next-arrow.png">
             <img src="images/hippo-tn.jpg">
             <h3>HIPPOS</h3>
