--- a/Website2/animals.html
+++ b/Website2/animals.html
@@ -50,13 +50,13 @@
             <h3>LIONS</h3>
             <P>King of the jungle</P>
         </a>
-        <a class="info-box" href="#">
+        <a class="info-box" href="pandas.html">
             <img class="right" src="images/next-arrow.png">
             <img src="images/panda-tn.png">
             <h3>PANDAS</h3>
             <P>The pandas seem to be everyone's favorite</P>
         </a>
-        <a class="info-box" href="#">
+        <a class="info-box" href="koalas.html">
             <img class="right" src="images/next-arrow.png">
             <img src="images/koala-tn.png">
             <h3>KOALAS</h3>
@@ -68,14 +68,14 @@
             <h3>GORILLAS</h3>
             <P>Kong the gorilla is much friendlier than he looks</P>
         </a>
-            <a class="info-box" href="#">
+            <a class="info-box" href="warthogs.html">
             <img class="right" src="images/next-arrow.png">
             <img src="images/warthog-tn.png">
             <h3>WARTHOGS</h3>
             <P>Find out more about this funny-looking fellow</P>
         </a>
             </a>
-            <a class="info-box" href="#">
+            <a class="info-box" href="monkeys.html">
             <img class="right" src="images/next-arrow.png">
             <img src="images/monkey-tn.png">
             <h3>MONKEYS</h3>
