Added info on the panda page

--- a/Website2/pandas.html
+++ b/Website2/pandas.html
@@ -23,12 +23,30 @@
         <div id="info-box-full">
             <h1>Pandas</h1>
             <img src="images/panda.jpg">
+                <p>
+                    Pandas are native to China and are known for their distinctive black and white fur.
+                    They belongs to the order Carnivora and primarily feed on bamboo, which makes up 99% of their diet.
+                    Pandas are solitary animals, but they can be seen in pairs during the breeding season.
+                </p>
+                <p>
+                    The giant panda <b>(Ailuropoda melanoleuca)</b> also known as panda bear or simply panda, is a bear native to south central China. 
+                    It is easily recognized by the large, distinctive black patches around its eyes, over the ears, and across its round body. 
+                    The name "giant panda" is sometimes used to distinguish it from the unrelated red panda. 
+                    Giant pandas in the wild will occasionally eat other grasses, wild tubers, or even meat in the form of birds, rodents or carrion. 
+                    In captivity, they may receive honey, eggs, fish, yams, shrub leaves, oranges, or bananas along with specially prepared food.
+                </p>
+                <p>
+                    The giant panda lives in a few mountain ranges in central China, mainly in Sichuan province, 
+                    but also in neighbouring provinces, namely Shaanxi and Gansu. As a result of farming, deforestation, and other development, 
+                    the giant panda has been driven out of the lowland areas where it once lived.
+                    The giant panda is a conservation reliant endangered species.
+                </p>
+
 
             
             <p><strong> WILL YOU FIND THEM?</strong></p>
             <p>
-                You will find the elephants at pen E22, right next to the amphitheatre.
-                They are usually active in the morning and late afternoon, so plan your visit accordingly.
+                You will find the pandas at <b> Panda Canyon</b>.
             </p>     
         </div>
         <div id="bottom-tab">
