--- a/Website2/index.html
+++ b/Website2/index.html
@@ -19,7 +19,7 @@
         <!--<a href="#"> GAME</a>-->
     </div>
     <div id="main-home">
-        <img src="images/map.png" width="100%">
+        <img src="images/map.png">
     </div>
         <div id="bottom-tab">
         <a href="#"> WEATHER</a>
