Adding places page

--- a/Website2/places.html
+++ b/Website2/places.html
@@ -22,15 +22,15 @@
     </div id="content">
         <a class="info-box" href="elephants.html">
             <img class="right" src="images/next-arrow.png">
-            <img src="images/elephant-tn.png">
-            <h3>ELEPHANTS</h3>
-            <P>Gentle giants of the jungle</P>
+            <img src="images/amphitheatre-tn.png">
+            <h3>AMPHITHEATRE</h3>
+            <P>LCatch an educational and entertaining event.</P>
         </a>
         <a class="info-box" href="gemsbok.html">
             <img class="right" src="images/next-arrow.png">
-            <img src="images/gemsbok-tn.png">
-            <h3>GEMSBOKS</h3>
-            <P>Come and see the majestic Gemsbok</P>
+            <img src="images/insect-house-tn.png">
+            <h3>INSECT HOUSE</h3>
+            <P>Creepy crawlies of every kind you can imagine!</P>
         </a>
         <a class="info-box" href="giraffes.html">
             <img class="right" src="images/next-arrow.png">
