--- a/Website2/lions.html
+++ b/Website2/lions.html
@@ -15,13 +15,13 @@
     <div id="top-tab">
         <a href="animals.html"> ANIMALS</a>
         <a href="#"> MAP</a>
-        <a href="#"> PLACES</a>
+        <a href="places.html"> PLACES</a>
         <!--<a href="#"> GAME</a>-->
     </div>
     <div id="main">
     </div id="content">
         <div id="info-box-full">
-            <h1>Lions</h1>
+            <h1>LIONS</h1>
             <img src="images/lion.jpg">
             <p>
                 Lions are large carnivorous mammals that belong to the family Felidae. 
