--- a/Website2/index.html
+++ b/Website2/index.html
@@ -15,7 +15,7 @@
     <div id="top-tab">
         <a href="animals.html"> ANIMALS</a>
         <a href="#"> MAP</a>
-        <a href="#"> PLACES</a>
+        <a href="places.html"> PLACES</a>
         <!--<a href="#"> GAME</a>-->
     </div>
     <div id="main-home">
