--- a/Website2/places.html
+++ b/Website2/places.html
@@ -24,7 +24,7 @@
             <img class="right" src="images/next-arrow.png">
             <img src="images/amphitheatre-tn.png">
             <h3>AMPHITHEATRE</h3>
-            <P>LCatch an educational and entertaining event.</P>
+            <P>Catch an educational and entertaining event.</P>
         </a>
         <a class="info-box" href="gemsbok.html">
             <img class="right" src="images/next-arrow.png">
@@ -34,52 +34,33 @@
         </a>
         <a class="info-box" href="giraffes.html">
             <img class="right" src="images/next-arrow.png">
-            <img src="images/giraffe-tn.png">
-            <h3>GIRAFFES</h3>
-            <P>Meet the tallest animal on earth</P>
-        </a>
-        <a class="info-box" href="hippos.html">
-            <img class="right" src="images/next-arrow.png">
-            <img src="images/hippo-tn.jpg">
-            <h3>HIPPOS</h3>
-            <P>See the largest land mammal</P>
+            <img src="images/monkey-trail-tn.png">
+            <h3>MONKEY TRAIL</h3>
+            <P>Take a walk or ride through this challenging obstacle course</P>
         </a>
         <a class="info-box" href="lions.html">
             <img class="right" src="images/next-arrow.png">
-            <img src="images/lion-tn.png">
-            <h3>LIONS</h3>
-            <P>King of the jungle</P>
+            <img src="images/coffee-shop-tn.png">
+            <h3>WILD THINGS COFFEE SHOP</h3>
+            <P>Enjoy a cuppa or a dessert here.</P>
         </a>
         <a class="info-box" href="pandas.html">
             <img class="right" src="images/next-arrow.png">
-            <img src="images/panda-tn.png">
-            <h3>PANDAS</h3>
-            <P>The pandas seem to be everyone's favorite</P>
+            <img src="images/lost-forest-tn.png">
+            <h3>LOST FOREST</h3>
+            <P>Relax and have a picnic under the trees by the lake.</P>
         </a>
         <a class="info-box" href="koalas.html">
             <img class="right" src="images/next-arrow.png">
-            <img src="images/koala-tn.png">
-            <h3>KOALAS</h3>
-            <P>Come take a look at the cute koalas</P>
+            <img src="images/pizza-shop-tn.png">
+            <h3>MO'S PIZZA</h3>
+            <P>Scrumptous Pizzas and Pastas for the Family.</P>
         </a>
         <a class="info-box" href="gorillas.html">
             <img class="right" src="images/next-arrow.png">
-            <img src="images/gorilla-tn.png">
-            <h3>GORILLAS</h3>
-            <P>Kong the gorilla is much friendlier than he looks</P>
-        </a>
-            <a class="info-box" href="warthogs.html">
-            <img class="right" src="images/next-arrow.png">
-            <img src="images/warthog-tn.png">
-            <h3>WARTHOGS</h3>
-            <P>Find out more about this funny-looking fellow</P>
-        </a>
-            </a>
-            <a class="info-box" href="monkeys.html">
-            <img class="right" src="images/next-arrow.png">
-            <img src="images/monkey-tn.png">
-            <h3>MONKEYS</h3>
-            <P>Playful monkeys are cleverer than you think</P>
+            <img src="images/outdoor_restaurant.jpg">
+            <h3>DINE AT THE ZOO</h3>
+            <P>Enjoy gourmet meals in a serene outdoor setting.</P>
         </a>
     </div>
         <div id="bottom-tab">
