added elements to places

--- a/Website2/places.html
+++ b/Website2/places.html
@@ -58,7 +58,7 @@
         </a>
         <a class="info-box" href="gorillas.html">
             <img class="right" src="images/next-arrow.png">
-            <img src="images/outdoor_restaurant.jpg">
+            <img src="images/restaurant-tn.png">
             <h3>DINE AT THE ZOO</h3>
             <P>Enjoy gourmet meals in a serene outdoor setting.</P>
         </a>
