added insect house

--- a/Website2/places.html
+++ b/Website2/places.html
@@ -26,7 +26,7 @@
             <h3>AMPHITHEATRE</h3>
             <P>Catch an educational and entertaining event.</P>
         </a>
-        <a class="info-box" href="gemsbok.html">
+        <a class="info-box" href="insecthouse.html">
             <img class="right" src="images/next-arrow.png">
             <img src="images/insect-house-tn.png">
             <h3>INSECT HOUSE</h3>
