fixed a few things in the code

--- a/Website2/index.html
+++ b/Website2/index.html
@@ -14,7 +14,7 @@
     </div>
     <div id="top-tab">
         <a href="animals.html"> ANIMALS</a>
-        <a href="#"> MAP</a>
+        <a href="index.html"> MAP</a>
         <a href="places.html"> PLACES</a>
         <!--<a href="#"> GAME</a>-->
     </div>
