Added restaurant script

--- a/Website2/places.html
+++ b/Website2/places.html
@@ -56,7 +56,7 @@
             <h3>MO'S PIZZA</h3>
             <P>Scrumptous Pizzas and Pastas for the Family.</P>
         </a>
-        <a class="info-box" href="gorillas.html">
+        <a class="info-box" href="restaurant.html">
             <img class="right" src="images/next-arrow.png">
             <img src="images/restaurant-tn.png">
             <h3>DINE AT THE ZOO</h3>
