Added coffee shop and other html pages

--- a/Website2/places.html
+++ b/Website2/places.html
@@ -44,13 +44,13 @@
             <h3>WILD THINGS COFFEE SHOP</h3>
             <P>Enjoy a cuppa or a dessert here.</P>
         </a>
-        <a class="info-box" href="pandas.html">
+        <a class="info-box" href="lostforest.html">
             <img class="right" src="images/next-arrow.png">
             <img src="images/lost-forest-tn.png">
             <h3>LOST FOREST</h3>
             <P>Relax and have a picnic under the trees by the lake.</P>
         </a>
-        <a class="info-box" href="koalas.html">
+        <a class="info-box" href="mospizza.html">
             <img class="right" src="images/next-arrow.png">
             <img src="images/pizza-shop-tn.png">
             <h3>MO'S PIZZA</h3>
