Added monkey trail page

--- a/Website2/places.html
+++ b/Website2/places.html
@@ -38,7 +38,7 @@
             <h3>MONKEY TRAIL</h3>
             <P>Take a walk or ride through this challenging obstacle course</P>
         </a>
-        <a class="info-box" href="lions.html">
+        <a class="info-box" href="coffeeshop.html">
             <img class="right" src="images/next-arrow.png">
             <img src="images/coffee-shop-tn.png">
             <h3>WILD THINGS COFFEE SHOP</h3>
