--- a/Website2/places.html
+++ b/Website2/places.html
@@ -32,7 +32,7 @@
             <h3>INSECT HOUSE</h3>
             <P>Creepy crawlies of every kind you can imagine!</P>
         </a>
-        <a class="info-box" href="giraffes.html">
+        <a class="info-box" href="monkeytrail.html">
             <img class="right" src="images/next-arrow.png">
             <img src="images/monkey-trail-tn.png">
             <h3>MONKEY TRAIL</h3>
