--- a/Website2/restaurant.html
+++ b/Website2/restaurant.html
@@ -16,7 +16,7 @@
                  <div id="content">
                       <div id="info-box-full">
                            <img src="images/outdoor_restaurant.jpg">
-                           <h3>DINE @ THE ZOO</h3>
+                           <h3>DINE AT THE ZOO</h3>
                            <p>Gourmet meals, a serene atmosphere, live music and good company - sometimes that's all you need.</p>
                            <p>Dine @The Zoo gives you all this.</p>
 
