--- a/Website2/warthogs.html
+++ b/Website2/warthogs.html
@@ -1,39 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="Stylesheet" href="style.css">
-    <title>Pine City Zoo</title>
-</head>
-<body>
-    <div id="header">
-        <a href="index.html">
-            <img src="images/logo.png">
-        </a>
-    </div>
-    <div id="top-tab">
-        <a href="animals.html"> ANIMALS</a>
-        <a href="#"> MAP</a>
-        <a href="#"> PLACES</a>
-        <!--<a href="#"> GAME</a>-->
-    </div>
-    <div id="main">
-    </div id="content">
-        <div id="info-box-full">
-            <h1>Warthogs</h1>
-            <img src="images/warthog.jpg">
-
-            
-            <p><strong> WILL YOU FIND THEM?</strong></p>
-            <p>
-                You will find the elephants at pen E22, right next to the amphitheatre.
-                They are usually active in the morning and late afternoon, so plan your visit accordingly.
-            </p>     
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div id="header">
+            <img src="images/logo.png"/>
         </div>
-        <div id="bottom-tab">
-        <a href="#"> WEATHER</a>
-        <a href="#"> FEEDBACK</a>
-    </div>
-</body>
+        <div id="tabs-top">
+            <a href="animals.html">ANIMALS</a>
+            <a href="index.html">MAP</a>
+            <a href="places.html">PLACES</a>
+        </div>
+             <div id="main">
+                 <div id="content">
+                      <div id="info-box-full">
+                           <img src="images/warthog.jpg">
+                           <h1>WARTHOGS</h1>
+                           <p>
+                                Phacochoerinae is a genus of wild pigs in the family suidae,known as warthogs.it is the sole genus of subfamily
+                                phacochoerinae.they are found in open and semi open habitats,even in quiet arid regions,in sub-saharan africa.the two species
+                                were formerly considered conspecific under the scientific name Phacochoerus aethiopicus,but today this is limited
+                                to the desert warthog,while the best-known and most widespread species,the common warthog(or simply warthog)
+                                is phacochoerus africanus.
+                            </p>
+                            <p>
+                                Although covered in bristly hairs,their bodies and heads appear largely naked from a distance
+                                with only the crest along the back,and the tufts on thier cheeks and tails being obviously haired.the english name refers
+                                to their facial wattles,which are particularly distinct in males.they also have very distinct tusks,which reach a lenght of
+                                25,5 to 63,5 cm (10.0 to 25.0 in)in the males,but are always smaller in the females.they are largely herbivorous,
+                                but occasionally also eat small animal food.while both species remain fairly common and widespread,and therefore
+                                are considered to be of least concerned by the IUCN,the nominate subspecies of the desert warthog,commanly
+                                known as the cape warthog,became extinct around 1865.
+                            </p>
+                            <p><strong>WHERE WILL YOU FIND THEM?</strong></p>
+                            <p>You will find the warthogs at WA11, near the elephant enclosure</p>
+                        </div>
+                    </div>
+              </div>
+              <div id="tabs-bottom">
+                 <a href="weather.html">WEATHER</a>
+                 <a href="feedback.html">FEEDBACK</a>
+              </div>
+    </body>
 </html>
