--- a/Website2/insecthouse.html
+++ b/Website2/insecthouse.html
@@ -7,7 +7,7 @@
         <div id="header">
             <img src="images/logo.png"/>
         </div>
-        <div id="tabs-top">
+        <div id="top-tab">
             <a href="animals.html">ANIMALS</a>
             <a href="index.html">MAP</a>
             <a href="places.html">PLACES</a>
@@ -23,7 +23,7 @@
                            <p>Insect House is at the eastern side of the zoo, next to the Monkey Trail.</p>
                       </div> 
                   </div>
-                  <div id="tabs-bottom">
+                  <div id="bottom-tab">
                        <a href="weather.html">WEATHER</a>
                        <a href="feedback.html">FEEDBACK</a>
                   </div> 
