--- a/Website2/amhphitheatre.html
+++ b/Website2/amhphitheatre.html
@@ -5,10 +5,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="header">
-            <img src="images/logo.png"/>
-        </div>
-        <div id="tabs-top">
+    <div id="header">
+        <a href="index.html">
+            <img src="images/logo.png">
+        </a>
+    </div>
+        <div id="top-tab">
             <a href="animals.html">ANIMALS</a>
             <a href="index.html">MAP</a>
             <a href="places.html">PLACES</a>
@@ -31,7 +33,7 @@
                       </div>
                  </div>
               </div>
-              <div id="tabs-bottom">
+              <div id="bottom-tab">
                  <a href="weather.html">WEATHER</a>
                  <a href="feedback.html">FEEDBACK</a>
               </div>
