--- a/Website2/coffeeshop.html
+++ b/Website2/coffeeshop.html
@@ -4,9 +4,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="header">
-            <img src="images/logo.png"/>
-        </div>
+    <div id="header">
+        <a href="index.html">
+            <img src="images/logo.png">
+        </a>
+    </div>
         <div id="tabs-top">
             <a href="animals.html">ANIMALS</a>
             <a href="index.html">MAP</a>
