--- a/Website2/coffeeshop.html
+++ b/Website2/coffeeshop.html
@@ -9,7 +9,7 @@
             <img src="images/logo.png">
         </a>
     </div>
-        <div id="tabs-top">
+        <div id="top-tab">
             <a href="animals.html">ANIMALS</a>
             <a href="index.html">MAP</a>
             <a href="places.html">PLACES</a>
@@ -27,7 +27,7 @@
                       </div>
                  </div>
               </div>
-              <div id="tabs-bottom">
+              <div id="bottom-tab">
                  <a href="weather.html">WEATHER</a>
                  <a href="feedback.html">FEEDBACK</a>
               </div>
