--- a/Website2/mospizza.html
+++ b/Website2/mospizza.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="style.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="Stylesheet" href="style.css">
+    <title>Pine City Zoo</title>
+</head>
     <body>
     <div id="header">
         <a href="index.html">
