Added the Thor site

--- a/WebsiteA/about.html
+++ b/WebsiteA/about.html
@@ -10,7 +10,7 @@
         <br>
         The following are the Avengers that you can find on this site:
         <ul>
-            <li> <a href="#"> Thor </a> </li>
+            <li> <a href="thor.html"> Thor </a> </li>
             <li> <a href="#"> Iron Man </a> </li>
             <li> <a href="#"> Hulk </a> </li>
             <li> <a href="#"> Hawkeye </a> </li>
