--- a/WebsiteA/about.html
+++ b/WebsiteA/about.html
@@ -4,6 +4,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="menu">
+            <a href="index.html">Home</a>
+            <a href="about.html">About us</a>
+            <a href="contact.html">contact us</a>
+        </div>
         <h2>About us</h2>
         <p>
             Welcome to the Avengers site where you can learn everything you need to know about Marvels Avengers.
