--- a/WebsiteA/index.html
+++ b/WebsiteA/index.html
@@ -11,7 +11,7 @@
         </div>
         <div class="gallery">
             <a href= "thor.html"> <img src="images/avengers_01.jpg"/> </a>
-            <a href="avenger-2.html"><img src="images/avengers_02.jpg"/></a>
+            <a href="ironman.html"><img src="images/avengers_02.jpg"/></a>
             <a href="avenger-3.html"><img src="images/avengers_03.jpg"/></a>
             <a href="avenger-4.html"><img src="images/avengers_04.jpg"/></a>
             <a href="avenger-5.html"><img src="images/avengers_05.jpg"/></a>
