--- a/WebsiteA/index.html
+++ b/WebsiteA/index.html
@@ -13,8 +13,8 @@
             <a href= "thor.html"> <img src="images/avengers_01.jpg"/> </a>
             <a href="ironman.html"><img src="images/avengers_02.jpg"/></a>
             <a href="hulk.html"><img src="images/avengers_03.jpg"/></a>
-            <a href="avenger-4.html"><img src="images/avengers_04.jpg"/></a>
-            <a href="avenger-5.html"><img src="images/avengers_05.jpg"/></a>
+            <a href="hawkeye.html"><img src="images/avengers_04.jpg"/></a>
+            <a href="captainamerica.html"><img src="images/avengers_05.jpg"/></a>
             <a href="avenger-6.html"><img src="images/avengers_06.jpg"/></a>
         </div>
     </body>
