--- a/WebsiteA/index.html
+++ b/WebsiteA/index.html
@@ -15,7 +15,7 @@
             <a href="hulk.html"><img src="images/avengers_03.jpg"/></a>
             <a href="hawkeye.html"><img src="images/avengers_04.jpg"/></a>
             <a href="captainamerica.html"><img src="images/avengers_05.jpg"/></a>
-            <a href="avenger-6.html"><img src="images/avengers_06.jpg"/></a>
+            <a href="blackwidow.html"><img src="images/avengers_06.jpg"/></a>
         </div>
     </body>
 </html>
