AAdded few elements toabout section

--- a/WebsiteA/about.html
+++ b/WebsiteA/about.html
@@ -17,10 +17,10 @@
         <ul>
             <li> <a href="thor.html"> Thor </a> </li>
             <li> <a href="ironman.html"> Iron Man </a> </li>
-            <li> <a href="#"> Hulk </a> </li>
-            <li> <a href="#"> Hawkeye </a> </li>
-            <li> <a href="#"> Captain America </a> </li>
-            <li> <a href="#"> Scarlet </a> </li>
+            <li> <a href="hulk.html"> Hulk </a> </li>
+            <li> <a href="hawkeye.html"> Hawkeye </a> </li>
+            <li> <a href="captainamerica.html"> Captain America </a> </li>
+            <li> <a href="blackwidow.html"> Black Widow </a> </li>
         </p>
         <p>
             This site is dedicated to all Marvel fans who want to know more about their favorite superheroes. 
