--- a/WebsiteA/about.html
+++ b/WebsiteA/about.html
@@ -7,7 +7,7 @@
         <div id="menu">
             <a href="index.html">Home</a>
             <a href="about.html">About us</a>
-            <a href="contact.html">contact us</a>
+            <a href="contactus.html">contact us</a>
         </div>
         <h2>About us</h2>
         <p>
@@ -27,6 +27,5 @@
             We hope you enjoy exploring the world of the Avengers and learning about their incredible powers, 
             epic battles, and heroic deeds.
         </p>
-
     </body>
 </html>
