--- a/WebsiteA/contactus.html
+++ b/WebsiteA/contactus.html
@@ -4,6 +4,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="menu">
+            <a href="index.html">Home</a>
+            <a href="about.html">About us</a>
+            <a href="contactus.html">contact us</a>
+        </div>
         <h2>contact us</h2>
         <p>
           you may contact us as follows:
