--- a/WebsiteA/contactus.html
+++ b/WebsiteA/contactus.html
@@ -11,7 +11,7 @@
         </div>
         <h2>contact us</h2>
         <p>
-          you may contact us as follows:
+          You may contact us on the following:
         <ul><li>phone:031 555 2222</ul></li>
         <ul><li>email: appdeveloper@awesome.com</li></ul>
         <ul><li>website:www.awesomeness.com</li></ul>
