--- a/WebsiteA/hawkeye.html
+++ b/WebsiteA/hawkeye.html
@@ -7,7 +7,7 @@
          <div id="menu">
             <a href="index.html">Home</a>
             <a href="about.html">About us</a>
-            <a href="contact.html">contact us</a>
+            <a href="contactus.html">contact us</a>
         </div>
         <h2>Hawkeye</h2>
         <div class="gallery">
