--- a/WebsiteA/hulk.html
+++ b/WebsiteA/hulk.html
@@ -8,7 +8,7 @@
          <div id="menu">
             <a href="index.html">Home</a>
             <a href="about.html">About us</a>
-            <a href="contact.html">contact us</a>
+            <a href="contactus.html">Contact us</a>
         </div>
         <h2>Hulk</h2>
         <div class="gallery">
