--- a/WebsiteA/thor.html
+++ b/WebsiteA/thor.html
@@ -30,8 +30,8 @@
         <p>Thor is a fictional superhero appearing in American comic books published by Marvel Comics.</p>
     </body>
 </html>
-        <div class="footer">
-<!--
+ <!--       <div class="footer">
+
     <footer>
             <p>© 2023 Avengers. All rights reserved.</p>
         </footer>
