--- a/WebsiteA/contactus.html
+++ b/WebsiteA/contactus.html
@@ -9,12 +9,12 @@
             <a href="about.html">About us</a>
             <a href="contactus.html">contact us</a>
         </div>
-        <h2>contact us</h2>
+        <h2>Contact us</h2>
         <p>
           You may contact us on the following:
-        <ul><li>phone:031 555 2222</ul></li>
-        <ul><li>email: appdeveloper@awesome.com</li></ul>
-        <ul><li>website:www.awesomeness.com</li></ul>
+        <ul><li>Phone:031 555 2222</ul></li>
+        <ul><li>Email: appdeveloper@awesome.com</li></ul>
+        <ul><li>Website: <a href = "#"> www.awesomeness.com </a></li></ul>
         </p>
     </body>
 </html>
