--- a/Website3/index.html
+++ b/Website3/index.html
@@ -40,8 +40,8 @@
             <td colspan="4"> = </td>
           </tr>
         </table>
-    <script>
-      
-    </script>
+  
+    <script src="script.js"></script>
+
   </body>
 </html>
