--- a/Website3/index.html
+++ b/Website3/index.html
@@ -13,7 +13,7 @@
             </td>
           </tr>
           <tr>
-            <td>7</td>
+            <td onclick="digitBtnPressed(7)">7</td>
             <td>8</td>
             <td>9</td>
             <td>x</td>
