--- a/Website3/index.html
+++ b/Website3/index.html
@@ -14,9 +14,9 @@
           </tr>
           <tr>
             <td onclick="digitBtnPressed(7)">7</td>
-            <td>8</td>
-            <td>9</td>
-            <td>x</td>
+            <td onclick="digitBtnPressed(8)">8</td>
+            <td onclick="digitBtnPressed(9)">9</td>
+            <td onclick="digitBtnPressed(7)">x</td>
           </tr>
           <tr>
             <td>4</td>
