--- a/Website3/index.html
+++ b/Website3/index.html
@@ -16,18 +16,18 @@
             <td onclick="digitBtnPressed(7)">7</td>
             <td onclick="digitBtnPressed(8)">8</td>
             <td onclick="digitBtnPressed(9)">9</td>
-            <td onclick="digitBtnPressed(7)">x</td>
+            <td >x</td>
           </tr>
           <tr>
-            <td>4</td>
-            <td>5</td>
-            <td>6</td>
+            <td onclick="digitBtnPressed(4)">4</td>
+            <td onclick="digitBtnPressed(5)">5</td>
+            <td onclick="digitBtnPressed(6)">6</td> 
             <td>-</td>
           </tr>
           <tr>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
+            <td onclick="digitBtnPressed(1)">1</td>
+            <td onclick="digitBtnPressed(2)">2</td>
+            <td onclick="digitBtnPressed(3)">3</td>
             <td>+</td>
           </tr>
           <tr>
